# cmake-practice

./: .gitignore  README.md
0708/: CMakeLists.txt
0709/: CMakeLists.txt
rtsp_client/: CMakeLists.txt  rtsp_client.cpp
